All SQL errors has been fixed (Error on remove Estado System); All Group System has been changed to PManager!

--- a/plugin.yml
+++ b/plugin.yml
@@ -6,8 +6,6 @@ author: zPandaKST_
 commands:
   cc:
   chatclear:
-  setcargo:
-  changegroup:
   pentcheck:
   account:
   fly:
@@ -15,9 +13,7 @@ commands:
   forcechat:
   setspawn:
   spawn:
-  groupset:
-  resetaccount:
-  resetallaccounts:
   checkkey:
   setvip:
   getconfig:
+  pmanager:
